feat: delete a document.
include some repository refactoring.
