# docs/swagger.json
@@ -58,7 +58,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Account ID",
+                        "description": "document ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -70,6 +70,66 @@
                         "schema": {
                             "type": "object",
                             "$ref": "#/definitions/documents.Document"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/core.ProblemDetail"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/core.ProblemDetail"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/core.ProblemDetail"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/core.ProblemDetail"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/core.ProblemDetail"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "use the supplied id to delete the document from the store",
+                "tags": [
+                    "documents"
+                ],
+                "summary": "delete a document by id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "document ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/documents.Result"
                         }
                     },
                     "400": {
@@ -541,6 +601,17 @@
                 },
                 "uploadFileToken": {
                     "type": "string"
+                }
+            }
+        },
+        "documents.Result": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "result": {
+                    "type": "integer"
                 }
             }
         },
